--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "debe-cli",
     "version": "1.0.0",
     "description": "",
-    "main": "app.js",
+    "main": "index.js",
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,8 +19,6 @@
     "homepage": "https://github.com/semihberkayozturk/debe-cli#readme",
     "dependencies": {
         "axios": "^0.27.2",
-        "chalk": "^5.0.1",
-        "chalk-animation": "^2.0.2",
         "figlet": "^1.5.2",
         "gradient-string": "^2.0.1",
         "inquirer": "^9.1.1",
